--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -9,3 +9,19 @@ gitlab_ci_runner_registration: []
     #     url: https://git.kilix.net/ci
     #     token: <gitlab ci token>
     #     executor: shell
+
+gitlab_ci_cleanup_docker_enabled: false
+
+gitlab_ci_cleanup_container_name: gitlab-runner-docker-cleanup
+gitlab_ci_cleanup_container_image: quay.io/gitlab/gitlab-runner-docker-cleanup
+
+gitlab_ci_cleanup_env:
+  LOW_FREE_SPACE: 10G
+  EXPECTED_FREE_SPACE: 20G
+  LOW_FREE_FILES_COUNT: 1048576
+  EXPECTED_FREE_FILES_COUNT: 2097152
+  DEFAULT_TTL: 10m
+  USE_DF: 1
+
+gitlab_ci_cleanup_container_volumes:
+  - "/var/run/docker.sock:/var/run/docker.sock"
