--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -24,6 +24,7 @@
     --name {{ item.item.name }}
     --executor {{ item.item.executor|default('docker') }}
     --docker-image {{ item.item.docker_image|default('python:2.7') }}
+    {{ ' --docker-privileged ' if (item.item.docker_privileged|default(false)) else '' }}
 
   when: item.stdout == '0'
   with_items: "{{ gitlab_ci_registered_runner_result.results }}"
