--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -23,6 +23,7 @@
     --registration-token {{ item.item.token }}
     --name {{ item.item.name }}
     --executor {{ item.item.executor|default('docker') }}
+    --locked={{ 'true' if (item.item.locked|default(false)) else 'false' }}
     --docker-image {{ item.item.docker_image|default('python:2.7') }}
     {{ ' --docker-privileged ' if (item.item.docker_privileged|default(false)) else '' }}
 
