add runner tags list config

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -9,6 +9,7 @@ gitlab_ci_runner_registration: []
     #     name: ci-runner<num>
     #     url: https://git.kilix.net/ci
     #     token: <gitlab ci token>
+    #     tags: []
     #     executor: shell
     #     locked: false
     #     cache: false
