--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -22,6 +22,7 @@
     --url {{ item.item.url }}
     --registration-token {{ item.item.token }}
     --name {{ item.item.name }}
+    {{ (' --tag-list ' ~ "'" ~ item.item.tags|join(',') ~ "'") if (item.item.tags|length) else '' }}
     --executor {{ item.item.executor|default('docker') }}
     --locked={{ 'true' if (item.item.locked|default(false)) else 'false' }}
     --docker-image {{ item.item.docker_image|default('python:2.7') }}
